  If compiled Python script is given, we try to find the non-compiled
  equivalent.

* 'help' command now allows an expression and runs Python's builtin help
  command (pydoc). Add pydoc command to call pydoc externally.

* Make prompt string detection in Emacs pydb-track more MS-friendly.
  Add a unit test for the Emacs interface.


1.20 2006-12-10

* Turning on signal checking may slow things down too much. So off
  by default. Fix bug in "set sigcheck". Add --sigcheck option.

* Allow a thread number in "info thread" and "frame" commands if 
  Python 2.5 or threadframe.

* Show all threads even if we don't know their names.

* Allow Pdb object to get passed in runv(). Allows for better ipython
  invocation (%pydb) and may be useful in other shells as well

* Provide a clue when debugger "run" command given but no "file" has
  been set.

* Better shell-like argument parsing in the "run" command via
  shlex. 

* Recover more gracefully if a post-mortem is called and there is none.

* set_trace is now an alias for debugger which is probably a more natural
  name.

* We tolerate now back to Python 2.3.3

* A number of small bugs fixed and document updates.

1.19 2006-10-27

* info threads: merge in terse display (Python 2.5, threadframe)
  and sort by thread name (Python 2.5)

* Add optional position argument on "continue" command.

* Add pydb.runl() and pydb.runv() forms to facilitate debugging a
  program from inside a Python shell.

* fix thread bugs: on startup with threading we stopped one statement
  too soon. more careful about storing into variables used in
  threading which are not locked (and so could be changed during a
  thread switch)

* Allow quit in thread debugging when MainThread is the only thread
  that we are in

* fix bugs in signal handling. 

* Add "stack" and "nostack" to list of things that can be done when
  a signal is received.

* things to make more ipython friendly.

* Improve pydb manual

1.18 2006-09-25

* Start thread debugging: 